--- a/dimistyles.css
+++ b/dimistyles.css
@@ -21,7 +21,6 @@ html {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
-    /*overflow-y: scroll;*/
 }
 
 @keyframes bgx {
@@ -197,6 +196,10 @@ nav ul li {
     color:white;
     font-size: 1.2em;
     padding: 0;
+ }
+
+ .callme p tel {
+    color:white;
  }
 
 
@@ -574,7 +577,7 @@ body#about, body#contact, body#gallery {
    z-index: 1000;
 }
 
-#about #gallery #scifi #scifiimg {
+#gallery #scifi #scifiimg {
    width: 400px;
    height: 300px;
    margin-top: 0;
@@ -974,6 +977,7 @@ footer .footersection2 nav.nav2 ul li {
         left: 0em;
         transform:scale(1);
         z-index: 499;
+       
     }
 
     h1#logo a {
@@ -1242,6 +1246,7 @@ footer .footersection2 nav.nav2 ul li {
     left: 0em;
     transform:scale(.67);
     z-index: 499;
+    
 }
 
 header nav {
@@ -1895,12 +1900,13 @@ footer .footersection2 nav.nav2 ul li {
         padding: 0;
         transform:scale(.64);
         z-index: 499;
+       
     }
     
     h1#logo a {
         position: absolute;
         top: 0.1em;
-        left: 3.5em;
+        left: 4.5em;
         background-image: url(letter_images/logo_djcdesign.png);
         background-size:contain;
         background-repeat:no-repeat;
@@ -1995,7 +2001,7 @@ footer .footersection2 nav.nav2 ul li {
         padding-top: .25em;
         padding-bottom: .25em;
         position: relative;
-        left: 3.2em;
+        left: 4.2em;
         padding-left: 0;
         padding-right: 0;
         width: 516px;
@@ -2949,7 +2955,7 @@ h1#logo a {
     #about, #gallery, #contact, #home {
         margin: 0;
         padding: 0;
-        
+       
     }
 
     fieldset input[type=text], fieldset input[type=tel], fieldset input[type=email] {
