--- a/dimistyles.css
+++ b/dimistyles.css
@@ -157,7 +157,7 @@ nav ul li {
     display: flex;
     flex-direction:column;
     align-items: center;
-    background-color:rgb(47, 79, 79, .64);
+    background-color:rgb(47, 79, 79, .5);
     position: absolute;
     left: 80%;
     right: 1em;
@@ -198,10 +198,16 @@ nav ul li {
     padding: 0;
  }
 
- .callme p tel {
-    color:white;
+ .callme a {
+    color: white;
+    font-weight: 200;
+    text-decoration: none;
  }
 
+ .callme a:hover {
+    color: #666666;
+    text-shadow: -1px 0 #333333, 0 1px #333333, 1px 0 #333333, 0 -1px #333333;
+ }
 
 /* Marketing Animations */
 
@@ -1191,7 +1197,7 @@ footer .footersection2 nav.nav2 ul li {
         display: flex;
         flex-direction:column;
         align-items: center;
-        background-color:rgb(47, 79, 79, .64);
+        background-color:rgb(47, 79, 79, .5);
         position: absolute;
         left: 80%;
         right: 1em;
@@ -1845,7 +1851,7 @@ footer .footersection2 nav.nav2 ul li {
     display: flex;
     flex-direction:column;
     align-items: center;
-    background-color:rgb(47, 79, 79, .64);
+    background-color:rgb(47, 79, 79, .5);
     position: absolute;
     left: 70%;
     right: 3em;
@@ -1906,7 +1912,7 @@ footer .footersection2 nav.nav2 ul li {
     h1#logo a {
         position: absolute;
         top: 0.1em;
-        left: 4.5em;
+        left: 3.5em;
         background-image: url(letter_images/logo_djcdesign.png);
         background-size:contain;
         background-repeat:no-repeat;
@@ -2001,7 +2007,7 @@ footer .footersection2 nav.nav2 ul li {
         padding-top: .25em;
         padding-bottom: .25em;
         position: relative;
-        left: 4.5em;
+        left: 3.2em;
         padding-left: 0;
         padding-right: 0;
         width: 516px;
@@ -2130,16 +2136,16 @@ footer .footersection2 nav.nav2 ul li {
         display: flex;
         flex-direction:column;
         align-items: center;
-        background-color:rgb(47, 79, 79, .64);
+        background-color:rgb(47, 79, 79, .5);
         position: absolute;
         left: 72%;
         right: 3em;
-        top: 0;
+        top: -.5em;
         border-radius: 50%;
         border: 2px solid black;
         z-index: 5000;
         padding: 0;
-        transform: scale(.8);
+        transform: scale(.72);
     }
     
     
@@ -2441,7 +2447,7 @@ footer .footersection2 nav.nav2 ul li {
             display: flex;
             flex-direction:column;
             align-items: center;
-            background-color:rgb(47, 79, 79, .64);
+            background-color:rgb(47, 79, 79, .5);
             position: absolute;
             left: 72%;
             right: 3em;
@@ -2614,7 +2620,7 @@ footer .footersection2 nav.nav2 ul li {
             display: flex;
             flex-direction:column;
             align-items: center;
-            background-color:rgb(47, 79, 79, .64);
+            background-color:rgb(47, 79, 79, .5);
             position: absolute;
             left: 75%;
             right: 1em;
@@ -2782,7 +2788,7 @@ footer .footersection2 nav.nav2 ul li {
             display: flex;
             flex-direction:column;
             align-items: center;
-            background-color:rgb(47, 79, 79, .64);
+            background-color:rgb(47, 79, 79, .5);
             position: absolute;
             left: 72%;
             right: 0;
@@ -2980,7 +2986,7 @@ h1#logo a {
         display: flex;
         flex-direction:column;
         align-items: center;
-        background-color:rgb(47, 79, 79, .64);
+        background-color:rgb(47, 79, 79, .5);
         position: absolute;
         left: 62%;
         right: 0;
@@ -3079,7 +3085,7 @@ h1#logo a {
         color: white;
         clear: both;
         position: absolute;
-        top: 55%;
+        top: 65%;
         margin-right: 0;
         margin-left: 0;
         margin-bottom: 0;
@@ -3127,7 +3133,7 @@ h1#logo a {
     display: flex;
     flex-direction:column;
     align-items: center;
-    background-color:rgb(47, 79, 79, .64);
+    background-color:rgb(47, 79, 79, .5);
     position: absolute;
     left: 64%;
     right: 0;
@@ -3280,7 +3286,7 @@ h1#logo a {
         display: flex;
         flex-direction:column;
         align-items: center;
-        background-color:rgb(47, 79, 79, .64);
+        background-color:rgb(47, 79, 79, .5);
         position: absolute;
         left: 70%;
         right: 0;
@@ -3412,7 +3418,7 @@ h1#logo a {
         display: flex;
         flex-direction:column;
         align-items: center;
-        background-color:rgb(47, 79, 79, .64);
+        background-color:rgb(47, 79, 79, .5);
         position: absolute;
         left: 72%;
         right: 0;
@@ -3558,7 +3564,7 @@ h1#logo a {
         display: flex;
         flex-direction:column;
         align-items: center;
-        background-color:rgb(47, 79, 79, .64);
+        background-color:rgb(47, 79, 79, .5);
         position: absolute;
         left: 64%;
         right: 0;
@@ -3687,7 +3693,7 @@ h1#logo a {
                 display: flex;
                 flex-direction:column;
                 align-items: center;
-                background-color:rgb(47, 79, 79, .64);
+                background-color:rgb(47, 79, 79, .5);
                 position: absolute;
                 left: 65%;
                 right: 0;
