--- a/dimistyles.css
+++ b/dimistyles.css
@@ -49,7 +49,7 @@ html {
     margin-left: auto;
     margin-right: auto;
     background-color: ghostwhite;
-    margin-top: 6.2em;
+    margin-top: 7.2em;
     padding: 0 0 2em 0em;
     box-shadow: 8px 18px 15px 8px rgb(47, 79, 79, .36);
     margin-bottom: 0;
@@ -1201,7 +1201,7 @@ footer .footersection2 nav.nav2 ul li {
         position: absolute;
         left: 80%;
         right: 1em;
-        top: 0%;
+        top: .25em;
         border-radius: 50%;
         border: 2px solid black;
         z-index: 5000;
